<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_restaurant"
        android:icon="@drawable/baseline_list_24"
        android:title="@string/title_restaurant" />

    <item
        android:id="@+id/navigation_workmate"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/title_workmate" />

</menu>