...
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:src="@drawable/baseline_search_24" />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/activity_main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
            app:layout_constraintTop_toBottomOf="@id/activity_main_toolbar">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
...
